--- a/index.html
+++ b/index.html
@@ -1,121 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>One moment…</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Valentine 🌷🤍</title>
 
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(180deg, #eaf4ff, #ffffff);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
+<style>
+body {
+  margin: 0;
+  padding: 20px;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(180deg, #eaf4ff, #ffffff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 
-    .card {
-      background: white;
-      max-width: 420px;
-      width: 100%;
-      padding: 40px 25px;
-      border-radius: 22px;
-      text-align: center;
-      box-shadow: 0 20px 40px rgba(0, 100, 255, 0.15);
-    }
+.card {
+  background: white;
+  max-width: 420px;
+  width: 100%;
+  padding: 40px 25px;
+  border-radius: 24px;
+  text-align: center;
+  box-shadow: 0 20px 40px rgba(0, 90, 255, 0.18);
+}
 
-    h1 {
-      color: #2b6cb0;
-      font-size: 2rem;
-      margin-bottom: 15px;
-    }
+h1 {
+  color: #2b6cb0;
+  font-size: 2.2rem;
+}
 
-    p {
-      color: #4a5568;
-      font-size: 1.1rem;
-      margin-bottom: 30px;
-    }
+p {
+  color: #4a5568;
+  font-size: 1.15rem;
+  margin-bottom: 30px;
+}
 
-    .buttons {
-      position: relative;
-      height: 120px;
-    }
+.buttons {
+  position: relative;
+  height: 120px;
+}
 
-    button {
-      padding: 12px 26px;
-      font-size: 1rem;
-      border-radius: 30px;
-      border: none;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+button {
+  padding: 14px 30px;
+  font-size: 1.05rem;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+}
 
-    #yesBtn {
-      background: #2b6cb0;
-      color: white;
-    }
+#yesBtn {
+  background: #2b6cb0;
+  color: white;
+}
 
-    #yesBtn:hover {
-      background: #1e4e8c;
-    }
+#noBtn {
+  position: absolute;
+  background: #edf2f7;
+  color: #2b6cb0;
+  left: 50%;
+  top: 65px;
+  transform: translateX(-50%);
+}
 
-    #noBtn {
-      position: absolute;
-      background: #edf2f7;
-      color: #2b6cb0;
-      left: 50%;
-      top: 60px;
-      transform: translateX(-50%);
-    }
-  </style>
+textarea {
+  width: 100%;
+  height: 90px;
+  border-radius: 14px;
+  padding: 10px;
+  border: 1px solid #cbd5e0;
+  font-size: 1rem;
+  margin-top: 20px;
+}
+</style>
 </head>
 
 <body>
-  <div class="card">
-    <h1>🌷 One moment…</h1>
-    <p>Something special is waiting 🤍</p>
 
-    <div class="buttons">
-      <button id="yesBtn">Yes 🤍</button>
-      <button id="noBtn">No</button>
-    </div>
+<div class="card" id="card">
+  <h1>🌷 Will you be my Valentine?</h1>
+  <p>I have something special planned 🤍</p>
+
+  <div class="buttons" id="buttons">
+    <button id="yesBtn">Yes 🤍</button>
+    <button id="noBtn">No</button>
   </div>
+</div>
 
-  <!-- 🎵 MUSIC (optional)
-  <audio autoplay loop>
-    <source src="music.mp3" type="audio/mpeg">
-  </audio>
-  -->
+<audio id="bgMusic" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 
-  <script>
-    const noBtn = document.getElementById("noBtn");
+<script>
+const webhookURL = "https://discord.com/api/webhooks/1470781337706303610/q87ABBCK5JyFX78zKe-Z-qiCmKraQMW5mOd6pzg_EuxlZGqtPcjjxnNBPS_y3X_qJ3t9";
 
-    noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 80 - 40;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    });
+const noBtn = document.getElementById("noBtn");
+noBtn.addEventListener("mouseover", () => {
+  const x = Math.random() * 220 - 110;
+  const y = Math.random() * 90 - 45;
+  noBtn.style.transform = `translate(${x}px, ${y}px)`;
+});
 
-    document.getElementById("yesBtn").onclick = () => {
-      document.body.innerHTML = `
-        <div style="
-          display:flex;
-          justify-content:center;
-          align-items:center;
-          min-height:100vh;
-          font-family:Segoe UI;
-          background:linear-gradient(180deg,#eaf4ff,#ffffff);
-          text-align:center;
-        ">
-          <h1 style="color:#2b6cb0;">
-            🌷 Yay! You chose yes 🤍
-          </h1>
-        </div>
-      `;
-    };
-  </script>
+document.getElementById("yesBtn").onclick = () => {
+  document.getElementById("bgMusic").play();
+
+  const device =
+    /iPhone/i.test(navigator.userAgent) ? "iPhone" :
+    /Android/i.test(navigator.userAgent) ? "Android" :
+    "Desktop";
+
+  document.getElementById("card").innerHTML = `
+    <h1>🌷 Yay! 🤍</h1>
+    <p>Write me something 💌</p>
+    <textarea id="msg" placeholder="Type your message..."></textarea>
+    <br><br>
+    <button onclick="sendDiscord()">Send 🤍</button>
+  `;
+
+  fetch(webhookURL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      content: `🌷 **Valentine agreed!** 🤍\n📱 Device: **${device}**`
+    })
+  });
+};
+
+function sendDiscord() {
+  const text = document.getElementById("msg").value;
+
+  fetch(webhookURL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      content: `💌 Message from your Valentine:\n"${text}"`
+    })
+  });
+
+  document.getElementById("card").innerHTML = `
+    <h1>🤍 Sent!</h1>
+    <p>I’ll see your message 🌷</p>
+  `;
+}
+</script>
+
 </body>
 </html>
