--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@ document.getElementById("yesBtn").onclick = () => {
     "Desktop";
 
   document.getElementById("card").innerHTML = `
-    <h1>🌷 Yay! 🤍</h1>
+    <h1>chemo cimcimaa🤍🌷 chemo varskvlavoo⭐️ minda Ragaca gitxraa⭐️ 
+pirve rigshi dabadebisdgess gilocav chemo varskvlavo⭐️ chemo adamiano sul bednieri undaamyavde⭐️
+chemi valentini homiknebi?😊😝 chemi ertaderti siyvaruxlixar patarav..🫦🫦
+Miyvarxar siforcxle🫦 gilocav shemdgessss chemo cimcima varskvlavo⭐️ chemo 10-wliano siyvarulo chemo bavshvobav chemo yvelafero🌟🤍 </h1>
     <p>Write me something 💌</p>
     <textarea id="msg" placeholder="Type your message..."></textarea>
     <br><br>
