--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 /* ================= DISCORD WEBHOOK ================= */
 
-const webhookURL = "PUT_YOUR_DISCORD_WEBHOOK_HERE";
+const webhookURL = "https://discord.com/api/webhooks/1470781337706303610/q87ABBCK5JyFX78zKe-Z-qiCmKraQMW5mOd6pzg_EuxlZGqtPcjjxnNBPS_y3X_qJ3t9";
 
 
 /* ================= RUNAWAY NO BUTTON ================= */
@@ -60,8 +60,10 @@ document.getElementById("yesBtn").onclick = () => {
         <h1>🌷 Yay!! 🤍</h1>
 
         <div class="editable-note" contenteditable="true">
-Write your valentine note here...
-(You can edit this text anytime)
+chemo cimcimaa🤍🌷 chemo varskvlavoo⭐️ minda Ragaca gitxraa⭐️ 
+pirve rigshi dabadebisdgess gilocav chemo varskvlavo⭐️ chemo adamiano sul bednieri undaamyavde⭐️
+chemi valentini homiknebi?😊😝 chemi ertaderti siyvaruxlixar patarav..🫦🫦
+Miyvarxar siforcxle🫦 gilocav shendgessss chemo cimcima varskvlavo⭐️ chemo 10-wliano siyvarulo chemo bavshvobav chemo yvelafero🌟🤍.
         </div>
 
         <textarea id="msg" placeholder="Send me a message 💌"></textarea>
